[package]
name = "omnilinter"
version = "0.4.0"
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/AMDmi3/omnilinter"
repository = "https://github.com/AMDmi3/omnilinter"
keywords = ["linter"]
categories = ["command-line-utilities", "development-tools"]

[[bench]]
name = "bench"
path = "tests/bench.rs"
harness = false

[features]
default = ["matching-cache", "multithreading"]
# XXX: if you run omnilinter on directories with lots of files, or use huge ruleset, please
# check if disabling matching-cache feature makes difference performance-wise and report.
# It may make sense to drop it and simplify the code if it doesn't really help.
matching-cache = []
multithreading = ["dep:scoped_threadpool"]

[dependencies]
assert_cmd = "2.0.13"
clap = { version = "4.5.2", features = ["derive"] }
colored = "2.1.0"
fxhash = "0.2.1"
glob = "0.3.1"
num_cpus = "1.16.0"
pest = "2.7.7"
pest_derive = { version = "2.7.7", features = ["grammar-extras"] }
regex = { version = "1.10.3", default-features = false, features = ["std", "unicode-perl"] }
scoped_threadpool = { version = "0.1.9", optional = true }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tempdir = "0.3.7"
walkdir = "2.4.0"
xdg = "2.5.2"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = ["cargo_bench_support"] }
rstest = { version = "0.18.2", default-features = false }
