[package]
name = "omnilinter"
description = "General purpose bulk linter"
version = "0.7.0"
edition = "2021"
authors = ["Dmitry Marakasov <amdmi3@amdmi3.ru>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/AMDmi3/omnilinter"
repository = "https://github.com/AMDmi3/omnilinter"
keywords = ["cli", "linter"]
categories = ["command-line-utilities", "development-tools"]

[[bench]]
name = "bench"
harness = false

[features]
default = ["matching-cache", "multithreading"]
# XXX: if you run omnilinter on directories with lots of files, or use huge ruleset, please
# check if disabling matching-cache feature makes difference performance-wise and report.
# It may make sense to drop it and simplify the code if it doesn't really help.
matching-cache = []
multithreading = ["dep:rayon"]
coverage = []

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
directories = "6.0.0"
fxhash = "0.2.1"
glob = "0.3.2"
pest = "2.7.15"
pest_derive = { version = "2.7.15", features = ["grammar-extras"] }
rayon = { version = "1.10.0", optional = true }
regex = { version = "1.11.1", default-features = false, features = ["std", "unicode-perl"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.16"
criterion = { version = "0.5.1", default-features = false, features = ["cargo_bench_support"] }
pretty_assertions = "1.4.1"
rstest = { version = "0.25.0", default-features = false }
tempfile = "3.19.0"
testutils = { path = "testutils" }
